# python-utilities

./: .bumpversion.cfg  .bumpversion.toml  .coveragerc.toml  .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  2024-12-03T12-47-49  Makefile  README.md  Untitled.ipynb  asdf  config.toml  foo  foo.py  foo.txt  info.txt  literal.ipynb  loopWithSleep.sh  memory.txt  noxfile.py  optuna  pyproject.toml  pyproject.toml-E  pytest.toml  requirements-all.txt  requirements-ci.txt  requirements-dev.txt  requirements.txt  ruff.toml  runProcessWithLiveOutput.py  run_subtests.sh  script.py  settings.toml  setup.cfg  study  temp.db  test  test_new.py  upserts
.github/workflows/: pull-request.yaml  pull-request.yml  push.yaml  push.yml
ci/: generate  macos-latest.txt  ubuntu-latest.txt  windows-latest.txt
requirements/: airium.txt  altair.txt  ast.txt  astor.txt  asyncio.txt  atomicwrites.txt  atools.txt  beartype.txt  bs4.txt  cacher.txt  cachetools.txt  click.txt  contextlib.txt  cryptography.txt  cvxpy.txt  dacite.txt  dataclasses.txt  datetime.txt  email.txt  enum.txt  errors.txt  eventkit.txt  fastapi.txt  fpdf2.txt  functions.txt  functools.txt  getpass.txt  git.txt  hashlib.txt  hatch.txt  holoviews.txt  http.txt  humps.txt  hypothesis.txt  img2pdf.txt  inspect.txt  ipython.txt  iterables.txt  json.txt  jupyter.txt  (+72 more)
scripts/: packages.txt  run_tests.py  run_tests.sh  run_uv_pip_compiles.sh  test.py
src/dycw_utilities/: modules.py  pandas.py  pqdm.py  pyinstrument.py  timer.py  typed_settings.py  typeguard.py  zipfile.py
src/dycw_utilities/hypothesis/: pandas.py
src/dycw_utilities/sqlalchemy/: __init__.py  pandas.py
src/tests/: conftest.py  functions.py  test_aeventkit.py  test_aiolimiter.py  test_altair.py  test_arq.py  test_ast.py  test_astor.py  test_asyncio.py  test_atomicwrites.py  test_atools.py  test_beartype.py  test_bidict.py  test_bs4.py  test_bz2.py  test_cacher.py  test_cachetools.py  test_class_name.py  test_clean_dir.py  test_click.py  test_compression.py  test_concurrent.py  test_constants.py  test_contextlib.py  test_contextvars.py  test_core.py  test_cryptography.py  test_cvxpy.py  test_dacite.py  test_dataclasses.py  test_datetime.py  test_dnspython.py  test_docker.py  test_email.py  test_enum.py  test_errors.py  test_eventkit.py  test_fastapi.py  test_fastparquet.py  test_fpdf2.py  (+117 more)
src/tests/attrs/: test_attrs.py  test_xarray.py
src/tests/click/: test_click.py  test_luigi.py  test_sqlalchemy.py
src/tests/core/: test_asyncio.py  test_builtins.py  test_coloredlogs.py  test_compression.py  test_constants.py  test_contextlib.py  test_contextvars.py  test_dataclasses.py  test_errors.py  test_functions.py  test_functools.py  test_grp.py  test_itertools.py  test_logging.py  test_os.py  test_pathlib.py  test_permissions.py  test_pwd.py  test_re.py  test_readers_writers.py  test_reprlib.py  test_rich.py  test_serialization.py  test_shutil.py  test_socket.py  test_tempfile.py  test_text.py  test_textwrap.py  test_time.py  test_warnings.py  test_whenever.py  test_writers.py  test_zoneinfo.py
src/tests/dataclasses/: test_xarray.py
src/tests/holoviews/: test_holoviews.py  test_xarray.py
src/tests/hypothesis/: test_hypothesis.py  test_init.py  test_luigi.py  test_numpy.py  test_pandas.py  test_semver.py  test_sqlalchemy.py  test_tempfile.py  test_xarray.py
src/tests/loguru/: script_to_test_luigi.py  test_loguru.py
src/tests/luigi/: test_attrs.py  test_luigi.py  test_semver.py  test_server.py  test_sqlalchemy.py  test_typed_settings.py
src/tests/math/: test_math.py  test_typing.py
src/tests/modules/: with_imports.py
src/tests/numpy/: test_common.py  test_numpy.py  test_pandas.py  test_typing.py
src/tests/pandas/: test_pandas.py  test_typing.py
src/tests/platform/: test_datetime.py  test_platform.py
src/tests/polars/: test_polars.py
src/tests/scripts/: test_clean_dir.py  test_csv_to_markdown.py  test_generate_snippets.py  test_luigi_server.py  test_monitor_memory.py  test_pypi_server.py
src/tests/sqlalchemy/: test_common.py  test_fastparquet.py  test_pandas.py  test_polars.py  test_sqlalchemy.py  test_timeout_decorator.py
src/tests/test_asyncio_classes/: loopers.py
src/tests/test_beartype_funcs/: no_future.py
src/tests/test_objects/: objects.py
src/tests/test_polars_funcs/: no_future_child.py  no_future_parent.py
src/tests/test_sys_funcs/: decorated.py  error.py  one.py  one_deco.py  two_deco.py
src/tests/test_traceback_funcs/: async_.py  beartype_aenter.py  beartype_error.py  decorated.py  enable_sync.py  recursive.py  recursive2.py  setup.py  task_group.py  two.py
src/tests/test_typing_funcs/: no_future.py  with_future.py
src/tests/test_yield_access/: script.sh
src/tests/xarray/: test_typing.py  test_xarray.py
src/tests/zarr/: test_common.py  test_xarray.py  test_zarr.py
src/utilities/: __init__.py  _core_errors.py  aiolimiter.py  airium.py  altair.py  arq.py  astor.py  asyncio.py  atomicwrites.py  atools.py  beartype.py  bidict.py  bs4.py  bz2.py  cacher.py  cachetools.py  class_name.py  click.py  compression.py  concurrent.py  config.toml  constants.py  contextlib.py  contextvars.py  core.py  cryptography.py  cvxpy.py  dacite.py  dataclasses.py  datetime.py  dnspython.py  docker.py  email.py  enum.py  errors.py  eventkit.py  fastapi.py  fastparquet.py  foo.py  foo_async.py  (+112 more)
src/utilities/_holoviews/: xarray.py
src/utilities/_luigi/: common.py  typed_settings.py
src/utilities/_numbagg/: __init__.py  decorators.py  moving.py
src/utilities/_numpy/: bottleneck.py
src/utilities/_sqlalchemy/: common.py  polars.py  timeout_decorator.py
src/utilities/attrs/: __init__.py  xarray.py
src/utilities/clean_dir/: __init__.py  classes.py
src/utilities/click/: __init__.py  sqlalchemy.py
src/utilities/holoviews/: __init__.py  xarray.py
src/utilities/hypothesis/: __init__.py  luigi.py  numpy.py  pandas.py  semver.py  sqlalchemy.py  xarray.py
src/utilities/luigi/: __init__.py  attrs.py  semver.py  sqlalchemy.py
src/utilities/math/: typing.py
src/utilities/monitor_memory/: __init__.py  __main__.py  (+1 more)
(+50 files in other folders)
