[build-system]
  build-backend = "uv_build"
  requires = ["uv_build"]

[dependency-groups]
  altair = ["altair>=6.0.0"]
  atools = ["atools>=0.14.2"]
  cachetools = ["cachetools>=6.2.4"]
  click = ["click>=8.3.1"]
  cvxpy = ["cvxpy>=1.7.5"]
  dev = [
    "coloredlogs>=15.0.1",
    "coverage-conditional-plugin>=0.9.0",
    "dycw-pytest-only>=2.1.1",
    "dycw-utilities[test]>=0.184.3",
    "pyright>=1.1.408",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.4.0",
    "rich>=14.3.1",
  ]
  fastapi = ["fastapi>=0.128.0"]
  fpdf2 = ["fpdf2>=2.8.5"]
  hypothesis = ["hypothesis>=6.150.3"]
  inflect = ["inflect>=7.5.0"]
  jinja2 = ["jinja2>=3.1.6"]
  libcst = ["libcst>=1.8.6"]
  lightweight-charts = ["lightweight-charts>=2.1"]
  memory-profiler = ["memory-profiler>=0.61.0"]
  more-itertools = ["more-itertools>=10.8.0"]
  numpy = ["numpy>=2.4.1"]
  operator = ["polars>=1.37.1"]
  optuna = ["optuna>=4.7.0"]
  orjson = ["orjson>=3.11.5"]
  packaging = ["packaging>=26.0"]
  polars = ["polars>=1.37.1"]
  polars-ols = ["polars-ols>=0.3.5"]
  pottery = ["pottery>=3.0.1"]
  pqdm = ["pqdm>=0.2.0"]
  psutil = ["psutil>=7.2.1"]
  pydantic = ["pydantic>=2.12.5"]
  pydantic-settings = ["pydantic-settings>=2.12.0"]
  pydantic-settings-sops = ["pydantic-settings-sops>=0.1.2"]
  pyinstrument = ["pyinstrument>=5.1.2"]
  pytest = [
    "pytest-asyncio>=1.3.0",
    "pytest-randomly>=4.0.1",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "pytest>=9.0.2",
  ]
  pytest-regressions = ["pytest-regressions>=2.9.1"]
  redis = ["orjson>=3.11.5", "redis>=7.1.0"]
  scipy = ["scipy>=1.17.0"]
  shellingham = ["shellingham>=1.5.4"]
  sklearn = ["scikit-learn>=1.8.0"]
  slack-sdk = ["slack-sdk>=3.39.0"]
  sqlalchemy = ["psycopg>=3.3.2", "sqlalchemy>=2.0.46"]
  sqlalchemy-polars = ["polars>=1.37.1", "sqlalchemy>=2.0.46"]
  statsmodels = ["statsmodels>=0.14.6"]
  tabulate = ["tabulate>=0.9.0"]
  testbook = ["testbook>=0.4.2"]

[project]
  authors = [{ email = "d.wan@icloud.com", name = "Derek Wan" }]
  dependencies = [
    "typing-extensions>=4.15.0",
    "tzdata>=2025.3",
    "tzlocal>=5.3.1",
    "whenever>=0.9.5",
  ]
  description = "Miscellaneous Python utilities"
  name = "dycw-utilities"
  readme = "README.md"
  requires-python = ">= 3.12"
  version = "0.186.2"

  [project.entry-points.pytest11]
    pytest-randomly = "utilities.pytest_plugins.pytest_randomly"
    pytest-regressions = "utilities.pytest_plugins.pytest_regressions"

  [project.optional-dependencies]
    logging = ["coloredlogs>=15.0.1"]
    test = [
      "dycw-pytest-only>=2.1.1",
      "hypothesis>=6.150.3",
      "pytest-asyncio>=1.3.0",
      "pytest-cov>=7.0.0",
      "pytest-instafail>=0.5.0",
      "pytest-lazy-fixtures>=1.4.0",
      "pytest-randomly>=4.0.1",
      "pytest-regressions>=2.9.1",
      "pytest-repeat>=0.9.4",
      "pytest-rerunfailures>=16.1",
      "pytest-rng>=1.0.0",
      "pytest-timeout>=2.4.0",
      "pytest-xdist>=3.8.0",
      "pytest>=9.0.2",
    ]

[tool]
  [tool.uv]
    default-groups = "all"

    [tool.uv.build-backend]
      module-name = "utilities"
      module-root = "src"
