[build-system]
  build-backend = "uv_build"
  requires = ["uv_build"]

[dependency-groups]
  dev = [
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "coloredlogs>=15.0.1",
    "coverage-conditional-plugin>=0.9.0",
    "dycw-pytest-only>=2.1.1",
    "dycw-utilities[test]>=0.184.3",
    "greenlet>=3.3.1",
    "pyright>=1.1.408",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.4.0",
    "rich>=14.3.1",
  ]

[project]
  authors = [{ email = "d.wan@icloud.com", name = "Derek Wan" }]
  dependencies = [
    "typing-extensions>=4.15.0",
    "tzdata>=2025.3",
    "tzlocal>=5.3.1",
    "whenever>=0.9.5",
  ]
  description = "Miscellaneous Python utilities"
  name = "dycw-utilities"
  readme = "README.md"
  requires-python = ">= 3.12"
  version = "0.186.2"

  [project.entry-points.pytest11]
    pytest-randomly = "utilities.pytest_plugins.pytest_randomly"
    pytest-regressions = "utilities.pytest_plugins.pytest_regressions"

  [project.optional-dependencies]
    logging = ["coloredlogs>=15.0.1"]
    test = [
      "dycw-pytest-only>=2.1.1",
      "hypothesis>=6.150.3",
      "pytest-asyncio>=1.3.0",
      "pytest-cov>=7.0.0",
      "pytest-instafail>=0.5.0",
      "pytest-lazy-fixtures>=1.4.0",
      "pytest-randomly>=4.0.1",
      "pytest-regressions>=2.9.1",
      "pytest-repeat>=0.9.4",
      "pytest-rerunfailures>=16.1",
      "pytest-rng>=1.0.0",
      "pytest-timeout>=2.4.0",
      "pytest-xdist>=3.8.0",
      "pytest>=9.0.2",
    ]

[tool]
  [tool.uv]
    default-groups = "all"

    [tool.uv.build-backend]
      module-name = "utilities"
      module-root = "src"
