[build-system]
  build-backend = "uv_build"
  requires = ["uv_build"]


[dependency-groups]
  dev = [
    "aiohttp>=3.13.3",
    "aiosqlite>=0.22.1",
    "altair>=6.0.0",
    "anyio>=4.12.1",
    "asyncpg>=0.31.0",
    "atools>=0.14.2",
    "cachetools>=7.0.1",
    "click>=8.3.1",
    "cvxpy>=1.8.1",
    "dycw-utilities[test]>=0.184.3",
    "fastapi>=0.129.0",
    "fpdf2>=2.8.5",
    "greenlet>=3.3.1",
    "httpx>=0.28.1",
    "img2pdf>=0.6.3",
    "inflect>=7.5.0",
    "jinja2>=3.1.6",
    "libcst>=1.8.6",
    "lightweight-charts>=2.1",
    "memory-profiler>=0.61.0",
    "more-itertools>=10.8.0",
    "numpy>=2.4.2",
    "optuna>=4.7.0",
    "orjson>=3.11.7",
    "packaging>=26.0",
    "pandas>=3.0.0",
    "pathvalidate>=3.3.1",
    "polars-ols>=0.3.5",
    "polars>=1.38.1",
    "pottery>=3.0.1",
    "pqdm>=0.2.0",
    "psutil>=7.2.2",
    "psycopg>=3.3.2",
    "pyarrow>=23.0.0",
    "pydantic-settings-sops>=0.1.2",
    "pydantic>=2.12.5",
    "pyinstrument>=5.1.2",
    "pyright>=1.1.408",
    "redis>=7.1.1",
    "rich>=14.3.2, <15",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "shellingham>=1.5.4",
    "slack-sdk>=3.40.0",
    "sqlalchemy>=2.0.46",
    "statsmodels>=0.14.6",
    "testbook>=0.4.2",
    "tomlkit>=0.14.0",
    "uvicorn>=0.40.0",
    "vl-convert-python>=1.9.0",
  ]


[project]
  authors = [{ email = "d.wan@icloud.com", name = "Derek Wan" }]
  dependencies = [
    "coloredlogs>=15.0.1",
    "more-itertools>=10.8.0",
    "rich>=14.3.2",
    "typing-extensions>=4.15.0",
    "tzdata>=2025.3",
    "tzlocal>=5.3.1",
    "whenever>=0.9.5",
  ]
  description = "Miscellaneous Python utilities"
  name = "dycw-utilities"
  readme = "README.md"
  requires-python = ">= 3.12"
  version = "0.189.2"

  [project.entry-points.pytest11]
    pytest-randomly = "utilities.pytest_plugins.pytest_randomly"
    pytest-regressions = "utilities.pytest_plugins.pytest_regressions"

  [project.optional-dependencies]
    logging = ["coloredlogs>=15.0.1"]
    test = [
      "coverage-conditional-plugin>=0.9.0",
      "dycw-pytest-only>=2.1.1",
      "hypothesis>=6.151.6",
      "pytest-asyncio>=1.3.0",
      "pytest-cov>=7.0.0",
      "pytest-instafail>=0.5.0",
      "pytest-lazy-fixtures>=1.4.0",
      "pytest-randomly>=4.0.1",
      "pytest-regressions>=2.10.0",
      "pytest-repeat>=0.9.4",
      "pytest-rerunfailures>=16.1",
      "pytest-rng>=1.0.0",
      "pytest-timeout>=2.4.0",
      "pytest-xdist>=3.8.0",
      "pytest>=9.0.2",
    ]


[tool]
  [tool.uv]
    default-groups = "all"

    [tool.uv.build-backend]
      module-name = "utilities"
      module-root = "src"
